--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
     <div>
         <p>
-            欧洲冠军杯联赛<br/>
+            欧洲冠军联赛<br/>
             <span class="color-gray">UEFA Champions League</span>
         </p>
         <img src="img/short_line.png"/>
