--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <li>比赛结束后系统会立即计算奖励并将 ETH 转至竞猜时的转入地址。</li>
         <li>开赛时刻之后的转账将视为无效，不计入奖励池，比赛结束后原路退回。</li>
     </ul>
-    <p style="color:#CCC;font-size:10px;margin-top:10px;">本应用由马来西亚云顶集团与澳门太阳城集团提供支持</p>
+    <p style="color:#CCC;font-size:10px;margin-top:10px;"></p>
 </div>
 </body>
 </html>
